crates/macro-tests/tests/snapshots/token__pre_authorized.snap
---
source: crates/macros/tests/token.rs
assertion_line: 21
expression: "&request"
---
credential_issuer: "http://credibil.io"
client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
grant_type: "urn:ietf:params:oauth:grant-type:pre-authorized_code"
pre-authorized_code: ABCDEF
tx_code: "1234"
